--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,8 @@
-<%= form_for(@task) do |f| %>
-  <% if @task.errors.any? %>
+<%= form_for(task) do |f| %>
+  <% if task.errors.any? %>
     <div id="error_explanation">
       <ul>
-        <% @task.errors.full_messages.each do |message| %>
+        <% task.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
