--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -5,11 +5,11 @@
         <td><%=@task.id%></td>
     </tr>
     <tr>
-        <th>ステータス</th>
+        <th>status</th>
         <td><%=@task.status%></td>
     </tr>
     <tr>
-        <th>タスク</th>
+        <th>task</th>
         <td><%=@task.content%></td>
     </tr>
 </table>
