--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -12,16 +12,16 @@
       <% end %>
       
     <div class="form-group">
-      <%=f.label :status, "ステータス"%>
+      <%=f.label :status, "status"%>
       <%=f.text_field :status,class:"form-control"%>
     </div>
       
     <div class="form-group">
-      <%= f.label :content, 'タスク' %>
+      <%= f.label :content, 'task' %>
       <%= f.text_field :content ,class:"form-control"%>
     </div>
     
-      <%= f.submit '投稿',class: "btn btn-primary" %>
+      <%= f.submit 'post',class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
