--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,12 @@
-<h1>タスク一覧</h1>
+<h1>Task list</h1>
 
 <%if @tasks.any?%>
   <table class="table table-striped">
     <thead>
       <tr>
         <th>id</th>
-        <th>ステータス</th>
-        <th>タスク</th>
+        <th>status</th>
+        <th>task</th>
       </tr>
     </thead>
     <tbody>
@@ -24,4 +24,4 @@
   </div>
 <%end%>
 
-<%= link_to '新規タスクの投稿', new_task_path , class: "btn btn-primary"%>
+<%= link_to 'Post task', new_task_path , class: "btn btn-primary"%>
